lab1/Test/L1-A-7-60.output
Error Type A at Line 11
Error Type A at Line 26
Error Type A at Line 38
