lab1/Test/L1-A-7-60.cmm
float ;
struct vNkbXCg {
  int _G ;
  int AzLrsKKManOBM ;
  int pLvi , Em6yc0rIL [ 1980423287 ] = e7dAS ;
}TF16SLmC10 ( ) {
  if ( lofQnAkAzblzrAmKb )   VrfXOvvWXdtd ;
else   while ( CeJLkB4BMw )   return OVEK1i5vR >= 
    vPFK02 + RrFeGathrQgxmSPee9hZ [ A2Ts = DWpVd || X 
    && MMho52 <= ZFS8Az4ChWWIv9B - Yc2W3zHhngR / ! - ( 
    zyggUjiGUY1yLeVbOo = ___uuYa4goMi05QE < cWTlL ( ~JWFGuyJtCSq5L5rHAeEy 
    , vEnSxSz47L || n9YCYEB1QX1V [ rHLYi_AT && oF6c3XJ5ixZIY 
    > hR0gTFBr * uflc1Vrn [ uymUuj8tTOG && uBj4ly == CEez5xts 
    / ( q36GcIokA = mh3TrYubY73 != RzPq9hMveRUgS8s ) ] 
    . y2ipU - SkKsG5dSzb ] - 715252674 * 542020397.1828346273 
    ) * OtpYUuSBugGf8 ( ) ) ] . NpdK2AOKKbur3WIfK8g ;


}
int teN1kA669vyp1JZ6VN , Q1 

;
struct GJL4sQJmiqbCGWP_q40 iTUh 
;
int ;
int fu ( #struct {
}HpvbeFdZeSU7vG7nh ) {
}
int QZeGT 
;
int ;
int ;
int ;
int ;
int ;
int jLIqvJuQCLp6imc ( int KvWJOiLbu_tD , int izOJ 
  ) {
@}
int FULlx4Sze ( ) {
}
int ygxWxZBxTWaBuSwzQ ( ) {
  am_HR ;
  uNEU5ns ;
  vwnV7syg1NT1f_ ;
  if ( a0fzf0klKlTKvb8g )   PygD ;
else   if ( zhvgG640u_bzSTWbS_y ) {
  }

}
